--- a/style.css
+++ b/style.css
@@ -1,144 +1,154 @@
-.container
-{
-    height: 100%;
-    display: grid;
-    grid-template-areas: 
-                         'header header'
-                         'nav nav'
-                         'caja1 caja2'
-                         'footer footer';
-    grid-template-rows: 1fr 0.25fr 2fr 0.5fr;
-    grid-template-columns: 1fr 1fr;
+.header {
+  width: 100%;
+  grid-area: header;
+  background-color: antiquewhite;
+  color: black;
+  text-align: center;
+  border-radius: 10px;
+  animation-name: animacionfondotitulo;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
 
-body
-{
-    background-color: antiquewhite;
+.header p {
+  color: black;
+  font-size: smaller;
+  font-weight: bold;
 }
 
-.header
-{
-    width: 100%;
-    grid-area: header;
-    background-color: lightslategrey;
-    color: black;
-    text-align: center;
-    border-radius: 10px;
+nav {
+  grid-area: nav;
+  width: 100%;
+  background-color: grey;
+  color: blue;
+  border-radius: 10px;
+  text-align: center;
+  transform: scale(1);
+  animation: animacionnav;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
 
-.header p
-{
-    color: antiquewhite;
-    font-size: smaller;
-    font-weight: bold;
+nav ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 20;
+  margin: 0;
 }
 
-nav
-{
-    grid-area: nav;
-    width: 100%;
-    background-color: grey;
-    color: blue;
-    border-radius: 10px;
-    text-align: center;
+nav li {
+  margin: 0 25 0 0;
 }
 
-nav ul
-{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 20;
-    margin: 0;
+nav a {
+  text-decoration: none;
 }
 
-nav li
-{
-    margin: 0 25 0 0;
+nav a:hover {
+  text-transform: uppercase;
+  color: antiquewhite;
 }
 
-nav a
-{
-    text-decoration: none;
+.c1 {
+  grid-area: caja1;
+  padding: 10;
+  gap: 10px;
+  margin: 2;
 }
 
-nav a:hover
-{
-    text-transform: uppercase;
-    color: antiquewhite;
+.c1:hover {
+  background-color: lightslategray;
+  font-weight: bold;
+  border-radius: 10px;
 }
 
-
-.c1
-{
-    grid-area: caja1;
-    padding: 10;
-    gap: 10px;
-    margin: 2;
+.c1 img {
+  width: 100%;
+  height: 275px;
+  border-radius: 10px;
 }
 
-.c1:hover
-{
-    background-color: lightslategray;
-    font-weight: bold;
-    border-radius: 10px;
+.c2 {
+  grid-area: caja2;
+  padding: 10;
+  gap: 10px;
+  margin: 2;
 }
 
-.c1 img
-{
-    width: 100%;
-    height: 275px;
-    border-radius: 10px;
+.c2:hover {
+  background-color: lightslategray;
+  font-weight: bold;
+  border-radius: 10px;
 }
 
-.c2
-{
-    grid-area: caja2;
-    padding: 10;
-    gap: 10px;
-    margin: 2;
+.c2 img {
+  width: 100%;
+  height: 275px;
+  border-radius: 10px;
 }
 
-.c2:hover
-{
-    background-color: lightslategray;
-    font-weight: bold;
-    border-radius: 10px;
+.footer {
+  grid-area: footer;
+  background-color: grey;
+  text-align: center;
+  color: antiquewhite;
+  width: 100%;
+  border-radius: 10px;
 }
 
-.c2 img
-{
-    width: 100%;
-    height: 275px;
-    border-radius: 10px;
+.iconos {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0 100px;
+  gap: 80px;
 }
 
-.footer
-{
-    grid-area: footer;
-    background-color: grey;
-    text-align: center;
-    color: antiquewhite;
-    width: 100%;
-    border-radius: 10px;
+.iconos img {
+  height: 50px;
+  width: 50px;
+}
+
+.container {
+  height: 100%;
+  display: grid;
+  grid-template-areas: "header header" "nav nav" "caja1 caja2" "footer footer";
+  grid-template-rows: 1fr 0.25fr 2fr 0.5fr;
+  grid-template-columns: 1fr 1fr;
+}
+
+body {
+  background-color: antiquewhite;
 }
 
 /*media querys*/
-
-@media only screen and (max-width:480px)
-{
-    .container
-    {
-        display: grid;
-        grid-template-areas: 
-                             'header'
-                             'nav'
-                             'caja1'
-                             'caja2'
-                             'footer';
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-        grid-template-columns: auto;
-        font-size: small;
-    }
+@media only screen and (max-width: 480px) {
+  .container {
+    display: grid;
+    grid-template-areas: "header" "nav" "caja1" "caja2" "footer";
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: auto;
+    font-size: small;
+  }
 }
+/*ANIMACIONES*/
+@keyframes animacionfondotitulo {
+  0%, 100% {
+    background-color: antiquewhite;
+  }
+  50% {
+    background-color: dimgray;
+  }
+}
+@keyframes animacionnav {
+  0%, 100% {
+    background-color: dimgray;
+  }
+  50% {
+    background-color: antiquewhite;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
