--- a/_main.scss
+++ b/_main.scss
@@ -1,5 +1,6 @@
 .c1
 {
+    margin-top:20px;
     grid-area: caja1;
     padding: 10;
     gap: 10px;
@@ -22,6 +23,7 @@
 
 .c2
 {
+    margin-top: 20px;
     grid-area: caja2;
     padding: 10;
     gap: 10px;
