--- a/_nav.scss
+++ b/_nav.scss
@@ -1,5 +1,6 @@
 nav
 {
+    margin-top: 2px;
     grid-area: nav;
     width: 100%;
     background-color:grey;
@@ -35,5 +36,5 @@ nav a
 nav a:hover
 {
     text-transform: uppercase;
-    color: antiquewhite;
+    color: red;
 }
