--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 }
 
 nav {
+  margin-top: 2px;
   grid-area: nav;
   width: 100%;
   background-color: grey;
@@ -48,10 +49,11 @@ nav a {
 
 nav a:hover {
   text-transform: uppercase;
-  color: antiquewhite;
+  color: red;
 }
 
 .c1 {
+  margin-top: 20px;
   grid-area: caja1;
   padding: 10;
   gap: 10px;
@@ -71,6 +73,7 @@ nav a:hover {
 }
 
 .c2 {
+  margin-top: 20px;
   grid-area: caja2;
   padding: 10;
   gap: 10px;
@@ -90,6 +93,7 @@ nav a:hover {
 }
 
 .footer {
+  margin-top: 20px;
   grid-area: footer;
   background-color: grey;
   text-align: center;
@@ -131,6 +135,8 @@ body {
     grid-template-rows: repeat(5, 1fr);
     grid-template-columns: auto;
     font-size: small;
+    display: flex;
+    flex-direction: column;
   }
 }
 /*ANIMACIONES*/
